flex:add preise

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div id="backbag1"> <img src="./IMG/photo1.png" alt="Vintage Backbag">
                     <div id="backbag-inf">
                         <h3> Vintage Backbag</h3>
-                        <p><span style="color: rgba(231, 105, 2, 0.932);">  $54.99</span>  <del>94.99</del></p>
+                        <p><span style="color: rgba(231, 105, 2, 0.932);"> $54.99</span> <del>94.99</del></p>
 
 
                         <div id="backbag-button">
@@ -118,7 +118,7 @@
                         <h3> Vintage Backbag</h3>
                         <p> <span style="color: rgba(231, 105, 2, 0.932);">$54.99 </span> <del>94.99</del></p>
 
-                        
+
 
                         <div id="backbag-button">
                             <button id="button1" aria-hidden="true"> <i class="material-icons">remove</i> </button>1
@@ -128,9 +128,17 @@
                     </div>
 
                 </div>
+                <br><br>
 
-
-
+                <div id="shipping">
+                    <div id="number1">Shipping </div>
+                    <div id="number2">$19</div>
+                </div>
+<br><br>
+                <div id="total">
+                    <div id="number3">Total </div>
+                    <div id="number4" class="total-euro">$148.98</div>
+                </div>
             </div>
         </main>
     </body>
