fix:changed grip statement

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                     <label for="Information"> <code> See this information next time</code></label>
                 </div>
 
+                <div class="submit">
+                    
+                    <input type="submit" value="Continue">
+                </div>
+
 
 
 
