feat:add grid attributes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="submit">
-                    
+
                     <input type="submit" value="Continue">
                 </div>
 
@@ -98,7 +98,61 @@
             </form>
 
         </div>
-        <div class="boxes box3">3</div>
+        <div class="boxes box3">
+            <div class="produkts">
+                <div id="produkt1">
+                    <img src="./IMG/photo1.png" width="150px" alt="Vintage BackBag">
+                    <div id="produkt1-ic-div">
+                        <h3 style="color: gray;"> Vintage Backbag</h3>
+                        <p> <span style="color: #f2994a; font-weight:700">$54.99</span> <del>$94.99</del> </p>
+                        <div class="buttons">
+                            <button id="minus-button" style="width: 25px; height:20px; "> <i class="fa fa-minus"></i>
+                            </button>
+                            <p>1</p>
+                            <button id="plus-button" style="width: 25px; height:20px"> <i class="fa fa-plus"></i>
+                            </button>
+
+                        </div>
+
+
+                    </div>
+                </div>
+
+                <div id="produkt2">
+                    <img src="./IMG/photo2.png" width="150px" alt="Levi Shoes">
+                    <div id="produkt2-ic-div">
+                        <h3 style="color: gray;"> Vintage Backbag</h3>
+                        <p> <span style="color: #f2994a; font-weight:700">$54.99</span> <del>$94.99</del> </p>
+                        <div class="buttons">
+                            <button id="minus-button" style="width: 25px; height:20px; "> <i class="fa fa-minus"></i>
+                            </button>
+                            <p>1</p>
+                            <button id="plus-button" style="width: 25px; height:20px"> <i class="fa fa-plus"></i>
+                            </button>
+
+                        </div>
+
+
+                    </div>
+
+                </div>
+                <div id="fis">
+                    <div id="shipping">
+                        <div id="p1">Shipping</div>
+                        <div id="p2">$19</div>
+                    </div>
+
+                    <div id="total">
+                        <div class="p1">Total</div>
+                        <div class="p2">$148.98</div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+        </div>
         <!-- <div class="boxes box3">4</div>
         <div class="boxes box4">5</div>
         <div class="boxes box4">6</div> -->
